--- a/index.html
+++ b/index.html
@@ -149,6 +149,6 @@
 			gestos.on('swiperight', showMenu);
 			gestos.on('swipeleft', hideMenu);
 		</script>
-		<link rel="stylesheet" href="css/invie.css">
+		<link rel="stylesheet" href="css/invie.min.css">
 	</body>
 </hmtl>
